--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -14,7 +14,6 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"></link>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-        <!-- Librería platfrom de google -->
         
         <!-- Librería propia con funciones para el cierre de sesión -->
         <h:outputScript library="js" name="logoutUtils.js"/>
@@ -81,7 +80,11 @@
             </p:column>
 
             <p:column headerText="Nombre">
-                <h:outputText value="#{serie.nombre}" />
+                <h:link outcome="verSerieComics" >
+                    <h:outputText value="#{serie.nombre}" />
+                    <f:param name="idSerie" value="#{serie.idSerie}" />
+                </h:link>
+                
             </p:column>
 
             <p:column headerText="Autor">
